--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-  <div class="wrapper"></div>
+  <div class="wrapper">
+    <audio src="./music.mp3" autoplay></audio>
+  </div>
 </body>
 </html>
