--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <audio src="./music.mp3" autoplay></audio>
+    <audio src="./music.mp3" controls autoplay></audio>
   </div>
 </body>
 </html>
