add script js file

--- a/index.html
+++ b/index.html
@@ -14,12 +14,6 @@
   </div>
 
 
-  <script>
-    const myAudioElement = document.getElementById('audio');
-    const startPlay = document.querySelector('.wrapper');
-    startPlay.addEventListener('click', () => {
-      myAudioElement.play();
-    })
-  </script>
+  <script src="./script.js"></script>
 </body>
 </html>
