--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="wrapper">
     <audio id="audio" src="./music.mp3" loop></audio>
-    <audio src=""></audio>
+    <img src="./img/btn.png" alt="btn" class="btn">
   </div>
 
 
