change folder audio

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <audio id="audio" src="./music.mp3" loop></audio>
+    <audio id="audio" src="./audio/music.mp3" loop></audio>
     <img src="./img/face.png" alt="btn" class="btn">
   </div>
   <script src="./script.js"></script>
