--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
   <div class="wrapper">
-    <audio id="audio" src="./audio/music.mp3" loop></audio>
+    <audio id="audio1" src="./audio/op1.mp3" loop></audio>
+    <audio id="audio2" src="./audio/op2.mp3" loop></audio>
     <img src="./img/face.png" alt="btn" class="btn">
   </div>
   <script src="./script.js"></script>
