--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <div class="wrapper">
     <audio id="audio1" src="./audio/op1.mp3" loop></audio>
     <audio id="audio2" src="./audio/op2.mp3" loop></audio>
-    <img src="./img/face.png" alt="btn" class="btn">
+    <img src="./img/face.png" alt="btn" class="btn btn1">
+    <img src="./img/garou.png" alt="btn" class="btn btn2">
   </div>
   <script src="./script.js"></script>
 </body>
